Added potential questions section

--- a/OxFordCOVID-19DataExploration.html
+++ b/OxFordCOVID-19DataExploration.html
@@ -615,6 +615,12 @@ names(df_notes)</code></pre>
 ## [5] &quot;\nhttps://en.unesco.org/themes/education-emergencies/coronavirus-school-closures\nhttps://www.theguardian.com/world/2020/mar/12/how-do-coronavirus-containment-measures-vary-across-europe&quot;</code></pre>
 </div>
 </div>
+<div id="potential-questions-to-explore" class="section level2">
+<h2>Potential Questions to explore:</h2>
+<ul>
+<li>Which measures were most effective for which countries?</li>
+</ul>
+</div>
 
 
 
